# tuxtunes

./: .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  README.md  angular.json  commitlint.config.js  eslint.config.js  package-lock.json  package.json  tsconfig.spec.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: phase-2-smoke.md  phase-3-smoke.md  phase-4-smoke.md
src/: index.html  styles.css  test-providers.ts  test-setup.ts
src-tauri/: Cargo.toml  prax.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/prax/: schema.prax
src-tauri/prax/migrations/0001_initial/: migration.sql
src-tauri/src/: lib.rs  main.rs  runtime.rs
src-tauri/src/commands/: audio.rs  library.rs  mod.rs  playback.rs  playlists.rs  preferences.rs  smart.rs  sync.rs
src-tauri/src/db/: albums.rs  client.rs  distinct.rs  mod.rs  playlists.rs  preferences.rs  smart.rs  sync_sources.rs  sync_util.rs  tracks.rs
src-tauri/src/fs/: artwork.rs  coordinator.rs  events.rs  hash.rs  ingest.rs  mod.rs  organize.rs  path.rs  verify.rs
src-tauri/src/integration/: mod.rs  mpris.rs  notify.rs  tray.rs
src-tauri/src/playback/: config.rs  device.rs  engine.rs  events.rs  mod.rs  stats.rs
src-tauri/src/sync/: conflict.rs  coordinator.rs  events.rs  mod.rs  path_map.rs  reconcile_playlists.rs  reconcile_tracks.rs  worker.rs
src-tauri/tests/: commands_smoke.rs  fs_ingest_smoke.rs  fs_organize_smoke.rs  fs_verify_smoke.rs  integration_smoke.rs  itl_smoke.rs  libmpv_smoke.rs  sync_integration.rs  sync_smoke.rs
src/app/: app.html  (+5 more)
(+66 files in other folders)
