[package]
name = "tuxtunes"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
prax-orm = { version = "0.8", features = ["sqlite"] }
prax-sqlite = "0.8"
prax-migrate = "0.8"
prax-codegen = "0.8"
prax-schema = "0.8"
prax-query = "0.8"
itl-rs = "0.2"
lofty = "0.22"
plist = "1"
libmpv2 = { version = "5", default-features = false }
percent-encoding = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
twox-hash = "1"
byteorder = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
